Add game details page
- Styling and all components completed
- Added shadcn for screenshot carousel
- Collect game button functionality not implemented yet

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,22 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  /* background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 @layer components {
@@ -35,6 +22,31 @@ body {
     background-position: top;
     height: 296px;
   }
+  .btn {
+    width: 100%;
+    max-width: 358px;
+    height: 40px;
+    border-radius: 30px;
+    width: Fixed (358px) px;
+    padding: 8px 16px 8px 16px;
+    @apply bg-violet-600;
+    color: white;
+    font-size: 16px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .elevateOnHover {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .btn:not(.btn-collected):hover,
+  .elevateOnHover:hover {
+    transform: scale(1.05);
+    box-shadow: 6px 6px 6px black;
+  }
+  .btn-collected {
+    @apply btn;
+    @apply border border-violet-600 text-violet-600;
+    @apply bg-white;
+  }
 }
 
 h1 {
@@ -46,9 +58,34 @@ h1 {
   background-clip: text;
   color: transparent;
 }
+h2 {
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+}
+h3 {
+  font-size: 14px;
+  font-weight: 500;
+  color: #775c90;
+}
+h4,
+p {
+  font-size: 14px;
+  font-weight: 500;
+  color: #666666;
+}
 
 @media (min-width: 640px) {
   h1 {
     font-size: 24px;
+  }
+  h4 {
+    font-size: 16px;
+  }
+}
+
+@layer base {
+  :root {
+    --radius: 0.5rem;
   }
 }
